[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/models/ship_dark.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/gameplay/Boat.gd" type="Script" id=2]
[ext_resource path="res://scenes/gameplay/boat_camera.gd" type="Script" id=3]
[ext_resource path="res://scenes/gameplay/TargetingTurret.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/models/pirate_captain.obj" type="ArrayMesh" id=5]
[ext_resource path="res://scenes/gameplay/shaderTargetingMinigameRadial.gdshader" type="Shader" id=6]
[ext_resource path="res://scenes/gameplay/RadialMinigame.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 7.0
height = 18.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("boat_pivot/model_pivot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("boat_pivot/model_pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("boat_pivot/model_pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("boat_pivot/model_pivot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 6, 0 ), Vector3( 0, 6, 0 ), Vector3( 0, 10, 0 ), Vector3( 0, -6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("boat_pivot/model_pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, -180 ), Vector3( 0, 0, -180 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("boat_pivot/model_pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.4, 1, 0.8 ), Vector3( 1.2, 1, 0.8 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 6 )
shader_param/u_pin = 0.538
shader_param/u_pinMargin = 0.01
shader_param/u_target = 0.951
shader_param/u_targetMargin = 0.126

[node name="boat" type="Spatial" groups=["boat"]]
script = ExtResource( 2 )

[node name="boat_pivot" type="Spatial" parent="."]
unique_name_in_owner = true

[node name="model_pivot" type="Spatial" parent="boat_pivot"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )

[node name="model" type="MeshInstance" parent="boat_pivot/model_pivot"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 1 )
skeleton = NodePath("../../..")

[node name="pirate_captain" type="MeshInstance" parent="boat_pivot/model_pivot"]
transform = Transform( 0.375, 0, 0, 0, 0.375, 0, 0, 0, 0.375, 0, 11.6935, 7.76063 )
mesh = ExtResource( 5 )

[node name="pirate_look_at" type="Position3D" parent="boat_pivot/model_pivot"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.96181, 0.342302 )

[node name="RemoteTransform" type="RemoteTransform" parent="boat_pivot/model_pivot/pirate_look_at"]
remote_path = NodePath("../../../../TargetingTurret")
update_rotation = false
update_scale = false

[node name="Area" type="Area" parent="boat_pivot/model_pivot"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="boat_pivot/model_pivot/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.59634, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="boat_pivot"]
transform = Transform( 1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 100, 30 )
current = true
fov = 90.0
far = 10000.0
script = ExtResource( 3 )

[node name="TargetingTurret" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.9618, 0.342302 )
skeleton = NodePath("../boat_pivot/model_pivot/pirate_look_at")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 3 )
anims/die = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RadialMinigame" type="ColorRect" parent="CanvasLayer/Control"]
unique_name_in_owner = true
material = SubResource( 5 )
margin_left = 92.0
margin_top = 743.0
margin_right = 526.0
margin_bottom = 978.0
script = ExtResource( 7 )

[connection signal="area_entered" from="boat_pivot/model_pivot/Area" to="." method="_on_Area_area_entered"]
